@@ -1,5 +1,1 @@
 # TODO
-
-## Replace `gomail` by `jordan-wright/email`
-
-Because `jordan-wright/email` is more straightforward.
